ENYO-3375: Сomplete "Expand/Collapse All" buttons work correctly, the filter works as required, expanded functionality: buttons work when the filter has an active state, scrolling jumps to the first position found, etc. (jshint compatible). Scroll to top after Expand/Collapse event.

--- a/deimos/source/designer/Palette.css
+++ b/deimos/source/designer/Palette.css
@@ -18,6 +18,10 @@
 	padding: 5px;
 }
 
+.palette-item.selected {
+	background-color: orange;
+}
+
 .palette-item > * {
 	display: inline-block;
 }
@@ -28,10 +32,10 @@
 	padding-right: 5px;
 	background-image: url('../../images/triangle.png');
 	background-repeat: no-repeat;
-	background-position-y: 0px;
+	background-position: 0px 0px;
 	display: inline-block;
 }
 
 .turned {
-	background-position-y: -16px;
+	background-position: 0px -16px;
 }
